Starting the website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>Simone's Page</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Reti Logiche Exam's Generator</h1>
+<p>Click <a href="rleg.html">here</a> to check out my project!</p>
 </body>
 </html>
