--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>Simone's Page</head>
+    <title>Simone's Page</title>
 <body>
 <h1>Reti Logiche Exam's Generator</h1>
 <p>Click <a href="rleg.html">here</a> to check out my project!</p>
