--- a/rleg.html
+++ b/rleg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>Reti Logiche Exam Generator</head>
+    <title>Reti Logiche Exam Generator</title>
 <body>
 <h1><a href="index.html">HOME</h1>
 </body>
